.manifests/db-projects-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-db-projects-depl
spec:
  selector:
    matchLabels:
      app: mic-db-projects
  template:
    metadata:
      labels:
        app: mic-db-projects
    spec:
      volumes:
        - name: mic-db-projects-volume
          hostPath:
            path: "/Users/DevPie/core/data/projects"
      containers:
        - name: mic-db-projects
          image: postgres:11.6
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: mic-db-projects-volume
---
apiVersion: v1
kind: Service
metadata:
  name: mic-db-projects-svc
spec:
  selector:
    app: mic-db-projects
  ports:
    - port: 5432
      targetPort: 5432
