.manifests/db-users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-db-users-depl
spec:
  selector:
    matchLabels:
      app: mic-db-users
  template:
    metadata:
      labels:
        app: mic-db-users
    spec:
      volumes:
        - name: mic-db-users-volume
          hostPath:
            path: "/Users/DevPie/core/data/users"
      containers:
        - name: mic-db-users
          image: postgres:11.6
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: mic-db-users-volume
---
apiVersion: v1
kind: Service
metadata:
  name: mic-db-users-svc
spec:
  selector:
    app: mic-db-users
  ports:
    - port: 5432
      targetPort: 5432
