.manifests/ingress-traefik-ds.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      tolerations:
        - effect: NoSchedule
          operator: Exists
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:2.4.8
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
#            - name: websecure
#              containerPort: 443
            - name: admin
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --pilot.dashboard=false
            - --providers.kubernetesingress=true
            - --providers.kubernetesingress.ingressendpoint.hostname=localhost
            - --api.dashboard=true
            - --api.insecure=true
            - --entrypoints.web.address=:80
            # permanent redirecting of all requests on http (80) to https (443)
#            - --entrypoints.web.http.redirections.entryPoint.to=websecure
#            - --entrypoints.web.http.redirections.entryPoint.scheme=https
#            - --entrypoints.websecure.address=:443
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
spec:
  selector:
    k8s-app: traefik-ingress-lb
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      name: web
#    - protocol: TCP
#      port: 443
#      name: websecure
    - protocol: TCP
      port: 8080
      name: admin
