.manifests/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devpie-client-ingress-rules
  annotations:
    traefik.ingress.kubernetes.io/router.pathmatcher: PathPrefix
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: mic-users-svc
                port:
                  number: 4000
          - path: /api/v1/projects
            pathType: Prefix
            backend:
              service:
                name: mic-projects-svc
                port:
                  number: 4020
